@@ -1,0 +1,10 @@
+#!perl -w
+
+use strict;
+
+use Test::DescribeMe qw(author);
+use Test::Most;
+use Test::Needs 'Test::Module::Used';
+
+my $used = Test::Module::Used->new(meta_file => 'MYMETA.yml');
+$used->ok();
